            - The field 'Opportunity.chance_to_win' checks now that the value is between 0 & 100.
        * Assistants :
            - The app permissions are now used by the bricks & function-fields;
              users which cannot access this app cannot view their content anymore
              (so you may have to update some roles).
        * Crudity :
            - BEWARE: the date format corresponds now to your server's language (i.e. 'settings.LANGUAGE_CODE').

  Developers side :
  -----------------
    - The version of 'Django' is now "5.2".
      You should probably read the following releases notes for Django versions :
        - https://docs.djangoproject.com/en/5.2/releases/5.0/
          Some important items :
            - The "logout" view uses now POST only.
            - The 'settings.py' value 'USE_L10N' has been removed.
            - The management of choices (models & forms fields) have been reworked ;
              it caused an issue during our upgrade with a strange couple form-field/form-widget which
              uses 3-tuples (see 'creme.emails.forms.sending.SendingConfigField' if you have an identical issue).
              The class 'django.forms.fields.CallableChoiceIterator' has been removed ;
              use 'django.utils.choices.CallableChoiceIterator' instead.
        - https://docs.djangoproject.com/en/5.2/releases/5.1/
        - https://docs.djangoproject.com/en/5.2/releases/5.2/
    - The version of 'underscorejs' is now '1.13.7'.
    - The version of 'fullcalendar' is now '6.1.18'.

    Non breaking changes :
    ----------------------
        # Deprecations :
            - The settings 'ENUMERABLE_REGISTRATION_ERROR' is deprecated ;
              it will be removed in Creme 2.8 & a exception will always be raised.
            - In 'creme_core.constants' :
                - The constant 'DEFAULT_CURRENCY_PK' is deprecated;
                  use 'Currency.objects.default().id' instead.